--- a/web/sharemusic/apps/client/templates/client/main.html
+++ b/web/sharemusic/apps/client/templates/client/main.html
@@ -41,6 +41,7 @@
   API_INDEX_URL = '{% url "api:index-files" "" %}';
   API_IMPORT_PLAYLIST_URL  = '{% url "api:import-playlist" "" %}';
   API_EXPORT_PLAYLIST_URL  = '{% url "api:export-playlist" %}';
+  API_DOWNLOAD_PLAYLIST_URL  = '{% url "api:download-playlist" %}';
   API_PLAYLIST_URL  = '{% url "api:playlist-list" %}';
   API_SEARCH_URL = '{% url "api:search" %}';
   API_STREAM_URL = '{% url "api:stream" "" %}';
