--- a/web/sharemusic/apps/client/static/client/templates/playlistbrowser.html
+++ b/web/sharemusic/apps/client/static/client/templates/playlistbrowser.html
@@ -20,12 +20,14 @@
           </div>
         </div>
         <div class="col-md-6">
-        <div class="input-group input-group-sm">
-          <input class="playlist-filter-input form-control" placeholder="title" ng-model="playlistSearchInput" type="text">
-          <span class="input-group-btn">
-            <button class="btn btn-default" ng-click="playlistSearch(playlistSearchInput)">Search</button>
-          </span>
+        <form class="" role="playlistSearch" id="playlistSearchForm">
+          <div class="input-group input-group-sm">
+            <input class="playlist-filter-input form-control" placeholder="title" ng-model="playlistSearchInput" type="text">
+            <span class="input-group-btn">
+              <button type="submit" class="btn btn-default" ng-click="playlistSearch(playlistSearchInput)">Search</button>
+            </span>
          </div>
+        </form>
         </div>
       </div>
       <ul class="cm-media-list" >
